--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,40 @@
-// TODO
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding-bottom: 2rem;
+
+  strong {
+    display: block;
+    font-size: 2rem;
+    padding-bottom: 1rem;
+  }
+
+  span {
+    color: var(--gray-300);
+  }
+
+  div {
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    display: flex;
+
+    time {
+      margin-right: 1rem;
+    }
+
+    svg {
+      margin-right: 0.5rem;
+    }
+
+    color: var(--gray-300);
+    margin-top: 0.5rem;
+  }
+}
+
+.loadingMore {
+  border: 0;
+  background: transparent;
+  color: var(--pink-500);
+  font-weight: bold;
+  margin-top: 2rem;
+}
