--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,57 @@
-// TODO
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 2rem;
+
+  h1 {
+    font-size: 3.5rem;
+    font-weight: 900;
+  }
+
+  div {
+    margin: 2rem 0;
+    color: var(--gray-300);
+
+    time {
+      margin: 0;
+      padding-right: 3rem;
+    }
+
+    p {
+      padding-right: 3rem;
+    }
+  }
+
+  time {
+    font-size: 1rem;
+    color: var(--gray-300);
+    margin-top: 1.5rem;
+    display: block;
+  }
+}
+
+.banner {
+  width: 100%;
+  height: 400px;
+  margin-bottom: 5rem;
+}
+
+.postContent {
+  margin-top: 2rem;
+  line-height: 2rem;
+  font-size: 1.125rem;
+  color: var(--gray-100);
+
+  p,
+  ul {
+    margin: 1.5rem 0;
+  }
+
+  ul {
+    padding-left: 1.5rem;
+
+    li {
+      margin: 0.5rem 0;
+    }
+  }
+}
