--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,40 +1,40 @@
-.container {
-  max-width: 1120px;
-  margin: 0 auto;
-  padding-bottom: 2rem;
-
-  strong {
-    display: block;
-    font-size: 2rem;
-    padding-bottom: 1rem;
+.post {
+  .title {
+    font-size: 1.75rem;
+    margin: 3rem 0 0.25rem;
+    transition: color 0.2s;
   }
 
-  span {
-    color: var(--gray-300);
+  &:hover .title {
+    color: var(--color-highlight);
   }
 
-  div {
-    padding-top: 1rem;
-    padding-bottom: 2rem;
+  .details {
+    margin-top: 1.5rem;
     display: flex;
 
-    time {
-      margin-right: 1rem;
-    }
+    span {
+      margin-right: 1.625rem;
+      display: flex;
+      align-items: center;
 
-    svg {
-      margin-right: 0.5rem;
+      .icon {
+        margin-right: 0.5rem;
+      }
     }
-
-    color: var(--gray-300);
-    margin-top: 0.5rem;
   }
+
 }
 
-.loadingMore {
-  border: 0;
+.loadPost {
+  color: var(--color-highlight);
+  font-weight: 600;
+  font-size: 1.125rem;
+  margin-top: 4rem;
   background: transparent;
-  color: var(--pink-500);
-  font-weight: bold;
-  margin-top: 2rem;
+  border: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
